ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-04-03 Jochen Manz
	- ENGINE:
		* Fixed #1160: perl ispcp-setup fails in trunk 1098
	
2008-04-02 Benedikt Heintel
	- ENGINE:
		* Fixed #1152: Hardcoded postfix configuration path in ispcp-mbox-mngr
		* Fixed #1153: Hardcoded postfix configuration path in ispcp-dmn-mgr
		* Fixed #1154: Hardcoded postfix configuration path in ispcp-sub-mgr & ispcp-als-mgr
	- SETUP:
		* Fixed #1149: A warning if a domain is given instead of a fq host name (setup)
		* Fixed #1156: Typo
		* Fixed #1158: ispcp-setup fail in r1097
	- DISTS:
		* Fixed #1155: Fix major freebsd dist setup

2008-03-31 Jochen Manz
	- GUI:
		* Fixed #1143: Do not use javascript history_back() on login-error

2008-03-31 Benedikt Heintel
	- CONFIGS:
		* Fixed Partly #1080: active web folders should not be deletable by customer (for main domain)
		* Changed: Config File Structure
	- ENGINE:
		* Fixed #1136: Overwriting fcgi config during update RC3->RC4
		* Fixed #1148: DNS serial is not updated more than once a day when changing sub domains
	- LANGUAGES:
		* Added: Bulgarian
	- TOOLS:
		* Update PHPmyAdmin to version 2.11.5.1

2008-03-29 Jochen Manz
	- DATABASE:
		* Fixed #1147: database.sql rev 1087 contaminated with ^M

2008-03-28 Christian Hernmarck
	- SETUP:
		* Fixed: if hostname is not qualified, get it again with 'hostname -f'

2008-03-27 Jochen Manz
	- DATABASE:
		* Fixed #1139: order settings only for one reseller, again
	- CONFIGS:
		* Updated all postfix main.cnf corresponding to the debian postfix main.cnf
		* Cleaned up every database.sql

2008-03-27 Benedikt Heintel
	- DATABASE:
		* Fixed #1139: order settings only for one reseller

2008-03-26 Benedikt Heintel
	- CONFIGS:
		* Fixed #1128: fastcgi idle timeout
	- DOCU:
		* Fixed #869: SUGGESTION: check if mysqld is running before starting installer
	- GUI:
		* Fixed #1135: php and cgi options in the hosting plans

2008-03-25 Benedikt Heintel
	- ENGINE: