@@ -30,7 +30,8 @@ NameVirtualHost 127.0.0.1:80
     <IfModule mod_rewrite.c>
         RewriteEngine on
         RewriteRule ^/stats/(.+)/$ http://localhost/awstats/?config=$1 [P]
-        RewriteRule ^/stats/(.+)/awstats.pl(.*)$ http://localhost/awstats/$2 [P]
+        RewriteRule ^/stats/(.+)/awstats.pl(.*)$ http://localhost/awstats/$1 [P]
+        RewriteRule ^/stats/(.*)$ http://localhost/stats/$1/ [R]
     </IfModule>
 
     ScriptAlias /awstats "{AWSTATS_ENGINE_DIR}/awstats.pl"
