@@ -1,5 +1,6 @@
 
-ROOT_COURIER_CONF=$(ROOT_CONF)/courier/authlib
+ROOT_AUTHLIB_CONF=$(ROOT_CONF)/courier/authlib
+ROOT_COURIER_CONF=$(ROOT_CONF)/courier
 ROOT_COURIER_IMAP_CONF=$(ROOT_CONF)/courier-imap
 
 export
@@ -7,7 +8,7 @@ export
 install:
 
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_CONF)/courier
-	$(SYSTEM_MAKE_DIRS) $(ROOT_COURIER_CONF)
+	$(SYSTEM_MAKE_DIRS) $(ROOT_AUTHLIB_CONF)
 	$(SYSTEM_MAKE_DIRS) $(ROOT_COURIER_IMAP_CONF)
 	$(SYSTEM_MAKE_DIRS) $(INST_PREF)/var/run/courier
 	$(SYSTEM_MAKE_FILE) $(INST_PREF)/var/log/mail.log
